Modification on top and bottom images pattern and card position

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="zero-in-out">
-  <img src="./images/bg-pattern-top.svg" id="top-img-pattern">
+  <img src="./images/bg-pattern-top.svg" id="top-img-pattern" alt="top image pattern">
   <div class="card">
     <div class="card-header">
       <img src="./images/image-victor.jpg" loading="lazy" alt="Profile Photo" class="profile-photo">
@@ -40,7 +40,7 @@
       </div>
     </div>
   </div>
-  <img src="./images/bg-pattern-bottom.svg" id="bottom-img-pattern">
+  <img src="./images/bg-pattern-bottom.svg" id="bottom-img-pattern" alt="bottom image pattern">
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/mohamedqabbari" target="_blank">Mohammed Qabbari</a>.
