--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="./images/bg-pattern-top.svg" id="top-img-pattern" alt="top image pattern">
   <div class="card">
     <div class="card-header">
-      <img src="./images/image-victor.jpg" loading="lazy" alt="Profile Photo" class="profile-photo">
+      <img src="./images/image-victor.jpg" alt="Profile Photo" class="profile-photo">
     </div>
     <div class="card-body zero-in-out">
       <div class="informations zero-in-out">
